--- a/index.html
+++ b/index.html
@@ -103,12 +103,16 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">Email*</label>
-                    <input autocomplete="on" id="email" placeholder="" class="form-control" type="email" required/>
+                    <input autocomplete="off" id="email" placeholder="" class="form-control" type="email" required/>
+                    <div class="alert alert-danger email" role="alert">
+                        <p data-email="exist">This email already have used</p>
+                        <p data-email="valid">Email is not valid</p>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">Password*</label>
                     <input autocomplete="off" id="password" placeholder="" class="form-control" type="password" required/>
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert alert-danger password" role="alert">
                         <p data-password="length">Password should have 6 or more characters</p>
                         <p data-password="digit">Password should have at least 1 digit</p>
                         <p data-password="uppercase">Password should have upperCase letters</p>
