--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="jumbotron main-page">
     <div class="container">
         <h1>Hey Guys</h1>
-        <p>Welcome to the event planner manager. Please login to create events!</p>
+        <p>Welcome to the event planner manager. Please login or sign up to create events!</p>
         <p><button type="button" class="btn btn-primary" disabled="disabled">Create event</button></p>
     </div>
 </div>
@@ -49,36 +49,33 @@
 <div class="container main-page">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-2 col-sm-4">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3 class="event-name">Event 1</h3>
-                    <p class="event-date">January 28, 2016</p>
-                    <p class="event-place">Los Angeles</p>
-                    <p class="event-description">Donec id elit non mi porta gravida at eget metus.</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Details</a></p>
+        <div class="col-md-4 col-sm-6">
+            <div class="panel panel-default event-panel">
+                <div class="panel-body">
+                    <h3 class="event-name">This is my first event</h3>
+                    <h5 class="event-type">Party</h5>
+                    <hr/>
+                    <p class="event-start-date">Event start date: <span>January 28, 2016</span></p>
+                    <p class="event-end-date">Event end date: <span>January 28, 2016</span></p>
+                    <p class="event-place">Location: <span>Los Angeles</span></p>
+                    <hr/>
+                    <p class="event-description">Description: <span>Donec id elit non mi porta gravida at eget metus.</span></p>
+                    <p class="event-guests">Guests: <span>Udacity guys</span></p>
+                    <p class="event-owner">Created by: <span>Roman</span></p>
                 </div>
             </div>
-        </div>
-        <div class="col-md-2 col-sm-4">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3 class="event-name">Event 1</h3>
-                    <p class="event-date">January 28, 2016</p>
-                    <p class="event-place">Los Angeles</p>
-                    <p class="event-description">Donec id elit non mi porta gravida at eget metus.</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Details</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-4">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3 class="event-name">Event 1</h3>
-                    <p class="event-date">January 28, 2016</p>
-                    <p class="event-place">Los Angeles</p>
-                    <p class="event-description">Donec id elit non mi porta gravida at eget metus.</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Details</a></p>
+            <div class="panel panel-default event-panel">
+                <div class="panel-body">
+                    <h3 class="event-name">This is my first event</h3>
+                    <h5 class="event-type">Party</h5>
+                    <hr/>
+                    <p class="event-start-date">Event start date: <span>January 28, 2016</span></p>
+                    <p class="event-end-date">Event end date: <span>January 28, 2016</span></p>
+                    <p class="event-place">Location: <span>Los Angeles</span></p>
+                    <hr/>
+                    <p class="event-description">Description: <span>Donec id elit non mi porta gravida at eget metus.</span></p>
+                    <p class="event-guests">Guests: <span>Udacity guys</span></p>
+                    <p class="event-owner">Created by: <span>Roman</span></p>
                 </div>
             </div>
         </div>
