--- a/index.html
+++ b/index.html
@@ -157,9 +157,12 @@
                         <input autocomplete="on" id="event-owner" placeholder="" class="form-control" type="text" required/>
                     </div>
                     <div class="form-group">
-                        <label class="control-label" for="event-guests">Guests</label>
+                        <label class="control-label" for="event-guests">Guests*</label>
                         <input autocomplete="on" id="event-guests" placeholder="" class="form-control" type="text" required/>
                     </div>
+                </div>
+                <div class="form-group">
+                    <p>* - required fields</p>
                 </div>
                 <div class="form-group events-control">
                     <button class="btn btn-success previous" data-nav="previous" disabled>Previous</button>
