Fix: update view and readme

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <form class="form-signup">
                 <div class="form-group" >
                     <label class="control-label" for="name">Name*</label>
-                    <input autocomplete="on" id="name" placeholder="" class="form-control" type="text" required/>
+                    <input autocomplete="on" autofocus id="name" placeholder="" class="form-control" type="text" required/>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="lastName">Last Name*</label>
@@ -137,11 +137,11 @@
                     <h4>Stage 2 of 3</h4>
                     <div class="form-group">
                         <label class="control-label" for="event-start-time">Event start date*</label>
-                        <input autocomplete="on" id="event-start-time" placeholder="" class="form-control" type="datetime" required/>
+                        <input autocomplete="on" id="event-start-time" placeholder="" class="form-control" type="date" required/>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="event-end-time">Event end date*</label>
-                        <input autocomplete="on" id="event-end-time" placeholder="" class="form-control" type="datetime" required/>
+                        <input autocomplete="on" id="event-end-time" placeholder="" class="form-control" type="date" required/>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="event-location">Location*</label>
