fix: update stage information. add progress bar instead of static text

--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
     <div class="row">
         <div class="col-sm-6">
             <form class="events-form" data-stage="1">
+                <h3>Creating event form</h3>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="">
+                    </div>
+                </div>
                 <div class="event-stage" data-stage="1">
-                    <h3>Creating event form</h3>
-                    <h4>Stage 1 of 3</h4>
                     <div class="form-group">
                         <label class="control-label" for="event-name">Event Name*</label>
                         <input autocomplete="on" id="event-name" placeholder="" class="form-control" type="text" required/>
@@ -133,8 +136,6 @@
                 </div>
 
                 <div class="event-stage" data-stage="2">
-                    <h3>Creating event form</h3>
-                    <h4>Stage 2 of 3</h4>
                     <div class="form-group">
                         <label class="control-label" for="event-start-time">Event start date*</label>
                         <input autocomplete="on" id="event-start-time" placeholder="" class="form-control" type="date" required/>
@@ -150,8 +151,6 @@
                 </div>
 
                 <div class="event-stage" data-stage="3">
-                    <h3>Creating event form</h3>
-                    <h4>Stage 3 of 3</h4>
                     <div class="form-group">
                         <label class="control-label" for="event-owner">Event owner*</label>
                         <input autocomplete="on" id="event-owner" placeholder="" class="form-control" type="text" required/>
