--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">Email*</label>
-                    <input autocomplete="off" id="email" placeholder="name@example.com" class="form-control" type="email" required/>
+                    <input autocomplete="off" id="email" placeholder="name@example.com" class="form-control invalid-email" type="email" required/>
                     <div class="alert alert-danger email" role="alert">
                         <p data-email="exist">This email already have used</p>
                         <p data-email="valid">Email is not valid</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="password">Password*</label>
-                    <input autocomplete="off" id="password" placeholder="Password" class="form-control" type="password" required/>
+                    <input autocomplete="off" id="password" placeholder="Password" class="form-control invalid-pas" type="password" required/>
                     <div class="alert alert-danger password" role="alert">
                         <p data-password="length">Password should have 6 or more characters</p>
                         <p data-password="digit">Password should have at least 1 digit</p>
