--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events app manager</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
-    <script src="js/jquery-2.2.0.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -72,7 +71,7 @@
                     <input autocomplete="off" id="email" placeholder="name@example.com" class="form-control invalid-email" type="email" required/>
                     <div class="alert alert-danger email" role="alert">
                         <p data-email="exist">This email already have used</p>
-                        <p data-email="valid">Email is not valid</p>
+                        <!--<p data-email="valid">Email is not valid</p>-->
                     </div>
                 </div>
                 <div class="form-group">
@@ -100,7 +99,7 @@
                 <div class="form-group">
                     <p>* - required fields</p>
                 </div>
-                <button type="submit" class="btn btn-success">Sign Up</button>
+                <button type="submit" class="btn btn-success" disabled>Sign Up</button>
             </form>
         </div>
     </div>
@@ -120,7 +119,7 @@
                 <div class="event-stage" data-stage="1">
                     <div class="form-group">
                         <label class="control-label" for="event-name">Event Name*</label>
-                        <input autocomplete="on" id="event-name" placeholder="New Year Celebration" class="form-control" type="text" required/>
+                        <input autocomplete="on" id="event-name" placeholder="New Year Celebration" class="form-control" type="text" required autofocus/>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="event-type">Event Type*</label>
@@ -167,13 +166,13 @@
                 </div>
                 <div class="form-group events-control">
                     <button class="btn btn-success previous" data-nav="previous" disabled>Previous</button>
-                    <button class="btn btn-success next" data-nav="next">Next</button>
+                    <button class="btn btn-success next" data-nav="next" disabled>Next</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
-<script src="js/bootstrap.js"></script>
+<script src="js/jquery-2.2.0.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
