--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
 </div>
-<script src="js/jquery-2.2.0.min.js"></script>
-<script src="js/app.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+<script src="js/all.js"></script>
 </body>
 </html>
