feat: add google places autocomplete for event-location

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     </div>
 </div>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.0.min.js"></script>
+<script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places" type="text/javascript"></script>
 <script src="js/all.js"></script>
 </body>
 </html>
